--- a/pics/templates/all-images/base.html
+++ b/pics/templates/all-images/base.html
@@ -12,17 +12,22 @@
   {% endif %}
 
   {% block styles %}
-  {% bootstrap_css %}
-{% endblock %}
+   {% bootstrap_css %}
+    <link rel = "stylesheet" href="{% static 'css/basepics.css'%}">
+  {% endblock %}
 </head>
 <body>
+    {% include "navbar.html"%}
+
     {% block scripts %}
 
-    <script src ="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js "></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <!-- <script src ="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js "></script> -->
     {% bootstrap_javascript %}
     {% endblock %}
 </body> -->
 
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+
 
 </html>
