--- a/pics/templates/navbar.html
+++ b/pics/templates/navbar.html
@@ -6,12 +6,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <!-- <a class="navbar-brand" href="{% url 'newsToday' %}">The Moringa Tribune</a> -->
-    </div>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+  
+       <a class="navbar-brand" href="{% url 'welcome' %}">Gallery</a>
+  
+     </div>
+     <div class="collapse navbar-collapse">
+     <h4 style="color: grey;"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+       Location
+       <span class="caret"></span>
+     </h4>
+     <ul class="dropdown-menu">
+       <li><a href="{%url 'location'%}">London</a></li>
+       <li><a href="{%url 'location1'%}">China</a></li>
+       <li><a href="{%url 'location2'%}">Malawi</a></li>
+       <li><a href="{%url 'location3'%}">Europe</a></li>
+  
+     </ul>
+   </div>
+  
+  
   </div>
-</nav>
+  
+  
+  
+  
+  
+  </nav>
+
 </body>
 </html>
