tested category to confirm if its working

--- a/pics/templates/all-images/base.html
+++ b/pics/templates/all-images/base.html
@@ -14,17 +14,33 @@
   {% block styles %}
    {% bootstrap_css %}
     <link rel = "stylesheet" href="{% static 'css/basepics.css'%}">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   {% endblock %}
 </head>
 <body>
     {% include "navbar.html"%}
+    {% include "form.html"%}
 
+    
     {% block scripts %}
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <!-- <script src ="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js "></script> -->
     {% bootstrap_javascript %}
+
+    <script src="{% static 'copy.js/clipboard.min.js'%}"></script>
+    <script>
+    var clipboard = new ClipboardJS('.btn');
+clipboard.on('success', function(e) {
+   alert('copied')
+   console.info('Action:', e.action);
+   console.info('Text:', e.text);
+   console.info('Trigger:', e.trigger);
+   e.clearSelection();
+});
+    </script>
+
     {% endblock %}
 </body> -->
 
