--- a/pics/templates/navbar.html
+++ b/pics/templates/navbar.html
@@ -10,7 +10,7 @@
     <div class="container-fluid">
       <div class="navbar-header">
   
-       <a class="navbar-brand" href="{% url 'welcome' %}">Gallery</a>
+       <a class="navbar-brand" href="{% url 'welcome' %}">Galla.me</a>
   
      </div>
      <div class="collapse navbar-collapse">
