--- a/pics/templates/all-images/first.html
+++ b/pics/templates/all-images/first.html
@@ -2,57 +2,55 @@
 {% load bootstrap3 %}
 {% load static %}
 
-
 {% block styles %}
 {{ block.super }}
 {% bootstrap_css %}
  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-<link rel="stylesheet" href="{% static 'css/index.css'%}">
+<link rel="stylesheet" href="{% static 'index.css'%}">
 {% endblock %}
 
 {% block content %}
-
-
-
-
 <div class="container">
-
-
   <div class="row">
+    {%for image in images %}
 
+    <div class="col-md-4 columns">
+      <div class="view view-first">
 
-{%for image in my_images %}
+        <img src="{{loc.image_path.url}}" class="img-thumbnail" alt="Image">
+        <p></p>
+        <div class="mask">
+      
+            <h2><a href="{%url 'description' image.id%}" class="info">View Image</a></h2>
+        
+          
+       
+          <div style="padding-top:10px;">
+            <input class="form-control input-lg" type="text" style="width:60%; margin-left: 20%;"
+                value="http://127.0.0.1:800" id="{{image.id}}-url">
+            <div style="padding-top:10px;">
+                <button class="btn btn-primary" onclick="imageurl('{{image.id}}-url');">Copy Link</button><br>
+            </div>
+        </div>
+        <script>
+            function imageurl(element) {
+                var image = document.getElementById(element);
+                image.select();
+                document.execCommand('copy');
+                alert("Copied the link of image:" + image.value);
+            }
+        </script>
+        </div>
+      </div>
+    </div>
+    {% empty %}
+    <div class="row">
+      <h2 class="text-center">There are no new items</h2>
 
-
-
-
-  <div class="col-md-4 columns">
-   <div class="view view-first">
-
-    <img src="{{image.image_path.url}}"class="img-thumbnail" alt="Image" style="">
-  <div class="mask">
-   <h2 ><a href="{%url 'description' image.id%}" class="info">View Image</a></h2>
-  <p class="btn" data-clipboard-text="http://127.0.0.1:8000{{image.image_path.url}}">Copy to clipboard</p>
-
+    </div>
+    {% endfor %}
+  </div>
 </div>
- </div>
-</div>
 
 
-
-  {% empty %}
-  <div class="row">
-    <h2 class="text-center">There are no new items</h2>
-
-</div>
-</div>
-</div>
-
-{% endfor %}
-
-
-
-
-
-{% endblock %}.3333
-[]
+{% endblock %}
