--- a/pics/templates/form.html
+++ b/pics/templates/form.html
@@ -6,6 +6,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Nanum+Brush+Script&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -13,11 +15,11 @@
 <form class="navbar-form" role="search" action="{% url 'search_category' %}">
 
           <div class="container" style="padding:20px;">
-          <center>  <h1 style="color: black; font-family: 'Raleway', sans-serif;">Galla.me</h1>
-            <h3 style="color:black;font-family: 'Raleway', sans-serif; ">An app that allows you to view beautiful and free images <br>
+          <center>  <h1 style="color: #0b0c52e7; font-family:'Nanum Brush Script', cursive; font-size: 100px" >Galla.me</h1>
+            <h3 style="color: #1a1a3bf5;font-family: 'Sriracha', cursive; font-size: 55px ">An app that allows you to view beautiful and free images <br>
             Search for images based on categories</h2></center>
           <br>
-          <div class="input-group" style="margin-left 400px;">
+          <div class="input-group" style="margin-left: 400px;">
 
            <input type="text"  class="form-control" placeholder="Search by category" name="category" >
             <div class="input-group-btn">
