--- a/pics/templates/form.html
+++ b/pics/templates/form.html
@@ -13,9 +13,10 @@
 
 <div class="container-fluid" style="background-image:url(../static/Pictures/backgroundimage1.jpg); height:500px;background-position:0% 25%;text-align:center;">
 <form class="navbar-form" role="search" action="{% url 'search_category' %}">
+   
 
           <div class="container" style="padding:20px;">
-          <center>  <h1 style="color: #0b0c52e7; font-family:'Nanum Brush Script', cursive; font-size: 100px" >Galla.me</h1>
+          <center>  <h1 style="color: #33520be7; font-family:'Nanum Brush Script', cursive; font-size: 100px" >Galla.me</h1>
             <h3 style="color: #1a1a3bf5;font-family: 'Sriracha', cursive; font-size: 55px ">An app that allows you to view beautiful and free images <br>
             Search for images based on categories</h2></center>
           <br>
@@ -26,7 +27,7 @@
               <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
             </div>
           </div>
-
+        </div>
         </form>
       </div>
     </div>
