--- a/pics/templates/form.html
+++ b/pics/templates/form.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<div class="container-fluid" style="background-image:url(../static/Pictures/backgroundimage1.jpg); height:500px;background-position:0% 25%;text-align:center;">
+<div class="container-fluid" style="background-image:url(./static/backg.jpeg); height:500px;background-position:0% 25%;text-align:center;">
 <form class="navbar-form" role="search" action="{% url 'search_category' %}">
    
 
