--- a/pics/templates/all-images/first.html
+++ b/pics/templates/all-images/first.html
@@ -28,7 +28,7 @@
        
           <div style="padding-top:10px;">
             <input class="form-control input-lg" type="text" style="width:60%; margin-left: 20%;"
-                value="http://127.0.0.1:8000/{{image.image_path}}" id="{{image.id}}-url">
+                value="https://gallax.herokuapp.com/{{image.image_path}}" id="{{image.id}}-url">
             <div style="padding-top:10px;">
                 <button class="btn btn-primary" onclick="imageurl('{{image.id}}-url');">Copy Link</button><br>
             </div>
