--- a/pics/templates/form.html
+++ b/pics/templates/form.html
@@ -11,13 +11,13 @@
 </head>
 <body>
 
-<div class="container-fluid" style="background-image:url(./static/lkjhg.jpeg); height:500px;background-position:center;text-align:center;">
+<div class="container-fluid" style="background-image:url(../static/background.jpeg);background-position: 0% 25%;text-align:center;background-repeat: no-repeat;height:500px">
 <form class="navbar-form" role="search" action="{% url 'search_category' %}">
    
 
           <div class="container" style="padding:20px;">
           <center>  <h1 style="color: #1a1a3bf5; font-family:'Nanum Brush Script', cursive; font-size: 100px" >Galla.me</h1>
-            <h3 style="color: #1a1a3bf5;font-family: 'Sriracha', cursive; font-size: 55px ">An app that allows you to view beautiful and free images <br>
+            <h3 style="color: #1a1a3bf5;font-family: 'Sriracha', cursive; font-size: 55px ;text-align: center;">An app that allows you to view beautiful and free images <br>
             Search for images based on categories</h2></center>
           <br>
           <div class="input-group" style="margin-left: 400px;">
