--- a/pics/templates/all-images/base.html
+++ b/pics/templates/all-images/base.html
@@ -4,35 +4,44 @@
 <html>
 <head>
   <meta charset="utf-8">
-  {% if title %}
-  <title>Art Galla- {{title}}</title>
-  {% else %}
-    <title> Art Galla </title>
-  {% endif %}
+  <title>Gallery</title>
   {% block styles %}
    {% bootstrap_css %}
-    <link rel = "stylesheet" href="{% static 'basepics.css'%}">
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+   <link rel="stylesheet" href="{% static 'css/baseimages.css' %}">
+   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+
   {% endblock %}
 </head>
+
 <body>
-    {% include "navbar.html"%}
-    {% include "form.html"%}
+  {% include "navbar.html" %}
+  {%include "form.html" %}
+  <br>
+  {% block content %}
 
-    {%block content%}
+  {% endblock %}
 
-    {%endblock%}
 
-    
-    {% block scripts %}
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <!-- <script src ="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js "></script> -->
-    {% bootstrap_javascript %}
+  {% block scripts %}
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+     {% bootstrap_javascript %}
+     <script src="{% static 'copy.js/clipboard.min.js'%}"></script>
+     <script>
+     var clipboard = new ClipboardJS('.btn');
+
+clipboard.on('success', function(e) {
+    alert('copied')
+    console.info('Action:', e.action);
+    console.info('Text:', e.text);
+    console.info('Trigger:', e.trigger);
+
+    e.clearSelection();
+});
+     </script>
     {% endblock %}
-</body> 
 
-
-
+</body>
 </html>
