--- a/pics/templates/form.html
+++ b/pics/templates/form.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<div class="container-fluid" style="background-image:url(../static/background.jpeg);background-position: 0% 25%;text-align:center;background-repeat: no-repeat;height:500px">
+<div class="container-fluid" style="background-image:url(/static/background.jpeg);background-position: 0% 25%;text-align:center;background-repeat: no-repeat;height:500px">
 <form class="navbar-form" role="search" action="{% url 'search_category' %}">
    
 
