--- a/pics/templates/navbar.html
+++ b/pics/templates/navbar.html
@@ -14,7 +14,7 @@
   
      </div>
      <div class="collapse navbar-collapse">
-     <h4 style="color: grey;"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+     <h4 style="color: blueviolet;"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
        Location
        <span class="caret"></span>
      </h4>
@@ -24,7 +24,7 @@
        <li><a href="{%url 'location2'%}">SouthAfrica</a></li>
        <li><a href="{%url 'location3'%}">Australia</a></li>
        <li><a href="{%url 'location3'%}">Afghanistan</a></li>
-       <li><a href="{%url 'location3'%}">Nairobi</a></li>
+      
   
      </ul>
    </div>
