--- a/pics/templates/navbar.html
+++ b/pics/templates/navbar.html
@@ -16,7 +16,7 @@
      <div class="collapse navbar-collapse">
      <h4 style="color: blueviolet;"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
        Location
-       <span class="caret"></span>
+       <span class="caret">Location</span>
      </h4>
      <ul class="dropdown-menu">
        <li><a href="{%url 'location'%}">London</a></li>
