update the flipcard on the first.html

--- a/pics/templates/all-images/first.html
+++ b/pics/templates/all-images/first.html
@@ -5,36 +5,56 @@
 {% block styles %}
 {{ block.super }}
 {% bootstrap_css %}
- <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 <link rel="stylesheet" href="{% static 'index.css'%}">
 {% endblock %}
 
 {% block content %}
 
 <div class="container">
-  
-  <div class="view view-first">
-    <div class="row no-gutters">
+  <div class="content-section-heading text-center">
+    <div class="view view-first">
+      <div class="row no-gutters">
 
-      {%for image in images %}
-      <div class="col-md-3" style="background-color:whitesmoke;">
-        <div class="card" style="width: 15rem;">
+        {%for image in images %}
 
-        <img src="{{image.image_path.url}}" class="img-thumbnail" alt="Image" style= "width: 250px ;height: 400px">
-        <p></p>
-    
-        <div class="mask">
-      
-            <h2><a href="{%url 'description' image.id%}" class="info">View Image</a></h2>
-            <p class="btn" data-clipboard-text="http://127.0.0.1:8000{{image.image_path.url}}">Copy to clipboard</p>
-        
-</div>
- </div>
-</div>
-  
-        
-          
-<!--        
+        <div class="col-md-3" style="background-color:whitesmoke;">
+          <div class="card" style="width: 18rem;">
+            <div class="card">
+              <div class="card-body">
+
+                <div class="flip-card">
+                  <div class="flip-card-inner">
+                    <div class="flip-card-front">
+
+
+                      <img src="{{image.image_path.url}}" class="img-thumbnail" alt="Image"
+                        style="width: 300px;height:300px;">
+                      <p></p>
+                    </div>
+
+                    <!-- <div class="mask"> -->
+                    <div class="flip-card-back">
+
+                      <h2><a href="{%url 'description' image.id%}" class="info">View Image</a></h2>
+                      <p class="btn" data-clipboard-text="http://127.0.0.1:8000{{image.image_path.url}}">Copy to
+                        clipboard</p>
+
+                      <div class="card-body">
+                        <h5 class="card-title"></h5>
+                        <p class="card-text">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+      <!--        
           <div style="padding-top:10px;">
             <input class="form-control input-lg" type="text" style="width:60%; margin-left: 20%;"
                 value="https://gallax.herokuapp.com/{{image.image_path}}" id="{{image.id}}-url">
@@ -53,11 +73,11 @@
         </div>
       </divclass="row">
     </div> -->
-    {% empty %}
-    <div class="row">
-      <h2 class="text-center">There are no new items</h2>
+      {% empty %}
+      <div class="row">
+        <h2 class="text-center">There are no new items</h2>
 
-    </div>
+      </div>
     </div>
   </div>
   {% endfor %}
