--- a/pics/templates/all-images/image.html
+++ b/pics/templates/all-images/image.html
@@ -4,6 +4,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-4">
+    
     <img src="{{images.image_path.url}}"  class="img-thumbnail" alt="">
   </div>
   <div class="col-md-4">
@@ -11,6 +12,9 @@
     <p>{{images.image_description}}</p>
     
   </div>
+</div>
+</div>
+</div>
 </div>
 {%endblock%}
 
